--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
 
 <h2>Christopher Kolstad's Git Achievements</h2>
-Unlocked 8/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 67 points<br>
+Unlocked 8/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 70 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Gipsy (Level 1)</div>  <div class="info">Create, list, delete a tag signed with GPG using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-tag.html">git-tag</a></div></li>
+<li><div class="title">Apprentice Gipsy (Level 2)</div>  <div class="info">Create, list, delete a tag signed with GPG using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-tag.html">git-tag</a></div></li>
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Socialite (Level 2)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Socialite (Level 3)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -34,24 +35,24 @@ Unlocked 8/48 <a href="http://github.com/icefox/git-achievements">Git Achievemen
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    962 status
-    925 branch
-    922 symbolic-ref
+    966 status
+    928 branch
+    925 symbolic-ref
      64 clone
      51 help
      48 add
      45 commit
-     32 push
+     33 push
      13 pull
      12 ignore
      11 rev-parse
      10 checkout
       7 rm
       3 config
+      2 tag
       2 remote
       2 log
       2 instaweb
-      1 tag
       1 --git-dir=.git
       1 fetch
       1 diff
