--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>Christopher Kolstad's Git Achievements</h2>
-Unlocked 10/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 81 points<br>
+Unlocked 10/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 88 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -27,6 +27,7 @@ Unlocked 10/48 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Web Designer (Level 1)</div>  <div class="info">Instantly browse your working repository in gitweb with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-instaweb.html">git-instaweb</a></div></li>
 <li><div class="title">Author (Level 4)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Author (Level 5)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
+<li><div class="title">Author (Level 6)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Baptised</div>  <div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Homeowner</div>  <div class="info">Set global email address using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
@@ -38,16 +39,16 @@ Unlocked 10/48 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1539 status
-   1476 branch
-   1473 symbolic-ref
+   1544 status
+   1481 branch
+   1478 symbolic-ref
      91 help
      65 clone
-     62 add
-     60 commit
-     41 push
+     63 add
+     62 commit
+     42 push
+     23 rev-parse
      23 pull
-     17 rev-parse
      15 checkout
      12 ignore
      10 --git-dir=.git
