--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>Christopher Kolstad's Git Achievements</h2>
-Unlocked 13/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 96 points<br>
+Unlocked 13/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 101 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -33,6 +33,7 @@ Unlocked 13/48 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Author (Level 6)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Baptised</div>  <div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
+<li><div class="title">Gipsy (Level 4)</div>  <div class="info">Create, list, delete a tag signed with GPG using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-tag.html">git-tag</a></div></li>
 <li><div class="title">Homeowner</div>  <div class="info">Set global email address using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -43,26 +44,26 @@ Unlocked 13/48 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1764 status
-   1683 symbolic-ref
+   1872 status
+   1785 symbolic-ref
    1590 branch
     101 help
-     78 add
-     73 commit
+     86 add
+     81 commit
      67 clone
-     50 push
+     52 push
      37 rev-parse
-     27 pull
+     29 pull
      19 checkout
-     12 ignore
+     13 ignore
+     11 diff
      10 rm
      10 --git-dir=.git
-      9 diff
       7 log
       5 config
+      3 tag
       3 rebase
       3 achievements
-      2 tag
       2 stash
       2 remote
       2 instaweb
@@ -70,6 +71,7 @@ Git commands sorted by usage:
       2 contrib
       1 grep
       1 --git-dir=/home/chriswk/src/felleskatalogen/eclsconfig/.git
+      1 describe
       1 commits-since
 </pre>
 <script type="text/javascript">
